// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Progress bar default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "backgroundColor": "#FFF",
        "maxWidth": 300,
        "padding": "1rem",
      }
    }
  >
    <div
      className="iot--progress-bar-container"
      data-testid="progress-bar-container"
      style={
        Object {
          "--progress-bar-fill-color": "#0f62fe",
          "--progress-bar-stroke-color": undefined,
        }
      }
    >
      <div
        className="iot--progress-bar__label--right"
      >
        <span
          className="iot--progress-bar__value-label"
          title="75%"
        >
          75%
        </span>
      </div>
      <div
        className="bx--progress-bar bx--progress-bar--big bx--progress-bar--default"
      >
        <span
          className="bx--progress-bar__label"
          id="progress-bar-694"
        >
          Progress bar label
        </span>
        <div
          aria-describedby="progress-bar-helper-695"
          aria-labelledby="progress-bar-694"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={75}
          className="bx--progress-bar__track"
          role="progressbar"
        >
          <div
            className="bx--progress-bar__bar"
            style={
              Object {
                "transform": "scaleX(0.75)",
              }
            }
          />
        </div>
        <div
          className="bx--progress-bar__helper-text"
          id="progress-bar-helper-695"
        >
          Optional helper text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Progress bar with icon 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "backgroundColor": "#FFF",
        "maxWidth": 300,
        "padding": "1rem",
      }
    }
  >
    <div
      className="iot--progress-bar-container iot--progress-bar-container--with-icon"
      data-testid="progress-bar-container"
      style={
        Object {
          "--progress-bar-fill-color": "#0f62fe",
          "--progress-bar-stroke-color": undefined,
        }
      }
    >
      <div
        className="iot--progress-bar__label--right"
      >
        <span
          className="iot--progress-bar__icon"
          data-testid="progress-bar-icon"
        >
          <svg
            aria-label="Progress bar icon"
            fill="#0f62fe"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2	c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8	c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
        </span>
        <span
          className="iot--progress-bar__value-label"
          title="75%"
        >
          75%
        </span>
      </div>
      <div
        className="bx--progress-bar bx--progress-bar--big bx--progress-bar--default"
      >
        <span
          className="bx--progress-bar__label"
          id="progress-bar-698"
        >
          Progress bar label
        </span>
        <div
          aria-describedby="progress-bar-helper-699"
          aria-labelledby="progress-bar-698"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={75}
          className="bx--progress-bar__track"
          role="progressbar"
        >
          <div
            className="bx--progress-bar__bar"
            style={
              Object {
                "transform": "scaleX(0.75)",
              }
            }
          />
        </div>
        <div
          className="bx--progress-bar__helper-text"
          id="progress-bar-helper-699"
        >
          Optional helper text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Progress bar with light 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "backgroundColor": "transparent",
        "maxWidth": 300,
        "padding": "1rem",
      }
    }
  >
    <div
      className="iot--progress-bar-container iot--progress-bar-container--light"
      data-testid="progress-bar-container"
      style={
        Object {
          "--progress-bar-fill-color": "#0f62fe",
          "--progress-bar-stroke-color": undefined,
        }
      }
    >
      <div
        className="iot--progress-bar__label--right"
      >
        <span
          className="iot--progress-bar__value-label"
          title="75%"
        >
          75%
        </span>
      </div>
      <div
        className="bx--progress-bar bx--progress-bar--big bx--progress-bar--default"
      >
        <span
          className="bx--progress-bar__label"
          id="progress-bar-696"
        >
          Progress bar label
        </span>
        <div
          aria-describedby="progress-bar-helper-697"
          aria-labelledby="progress-bar-696"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={75}
          className="bx--progress-bar__track"
          role="progressbar"
        >
          <div
            className="bx--progress-bar__bar"
            style={
              Object {
                "transform": "scaleX(0.75)",
              }
            }
          />
        </div>
        <div
          className="bx--progress-bar__helper-text"
          id="progress-bar-helper-697"
        >
          Optional helper text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Progress bar with renderIconByName 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "backgroundColor": "#FFF",
        "maxWidth": 300,
        "padding": "1rem",
      }
    }
  >
    <div
      className="iot--progress-bar-container iot--progress-bar-container--with-icon"
      data-testid="progress-bar-container"
      style={
        Object {
          "--progress-bar-fill-color": "#f1c21b",
          "--progress-bar-stroke-color": "#b28600",
        }
      }
    >
      <div
        className="iot--progress-bar__label--right"
      >
        <span
          className="iot--progress-bar__icon"
          data-testid="progress-bar-icon"
        >
          <svg
            aria-label="Progress bar icon"
            fill="#f1c21b"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            stroke="purple"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
            />
          </svg>
        </span>
        <span
          className="iot--progress-bar__value-label"
          title="75%"
        >
          75%
        </span>
      </div>
      <div
        className="bx--progress-bar bx--progress-bar--big bx--progress-bar--default"
      >
        <span
          className="bx--progress-bar__label"
          id="progress-bar-702"
        >
          Mon, Oct 5
        </span>
        <div
          aria-describedby="progress-bar-helper-703"
          aria-labelledby="progress-bar-702"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={75}
          className="bx--progress-bar__track"
          role="progressbar"
        >
          <div
            className="bx--progress-bar__bar"
            style={
              Object {
                "transform": "scaleX(0.75)",
              }
            }
          />
        </div>
        <div
          className="bx--progress-bar__helper-text"
          id="progress-bar-helper-703"
        >
          Optional helper text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Progress bar with thresholds 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "backgroundColor": "#FFF",
        "maxWidth": 300,
        "padding": "1rem",
      }
    }
  >
    <div
      className="iot--progress-bar-container"
      data-testid="progress-bar-container"
      style={
        Object {
          "--progress-bar-fill-color": "#f1c21b",
          "--progress-bar-stroke-color": "#b28600",
        }
      }
    >
      <div
        className="iot--progress-bar__label--right"
      >
        <span
          className="iot--progress-bar__value-label"
          title="75%"
        >
          75%
        </span>
      </div>
      <div
        className="bx--progress-bar bx--progress-bar--big bx--progress-bar--default"
      >
        <span
          className="bx--progress-bar__label"
          id="progress-bar-700"
        >
          Mon, Oct 5
        </span>
        <div
          aria-describedby="progress-bar-helper-701"
          aria-labelledby="progress-bar-700"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={75}
          className="bx--progress-bar__track"
          role="progressbar"
        >
          <div
            className="bx--progress-bar__bar"
            style={
              Object {
                "transform": "scaleX(0.75)",
              }
            }
          />
        </div>
        <div
          className="bx--progress-bar__helper-text"
          id="progress-bar-helper-701"
        >
          Optional helper text
        </div>
      </div>
    </div>
  </div>
</div>
`;
